--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nodejs-hw-mongodb",
   "version": "1.0.0",
   "description": "",
-  "type":"module",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "lint": "eslint src/**/*.js",
@@ -16,9 +16,13 @@
     "@eslint/js": "^9.5.0",
     "eslint": "^9.5.0",
     "globals": "^15.6.0",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "pino-pretty": "^11.2.1"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "pino-http": "^10.1.0"
   }
 }
