--- a/swagger/paths/contacts/{id}/patch.yaml
+++ b/swagger/paths/contacts/{id}/patch.yaml
@@ -45,7 +45,7 @@ requestBody:
           photo:
             description: "Link to contact's photo"
             type: string
-            example: <https://res.cloudinary.com/uqwgdu/image/upload/image.png>
+            format: binary
 responses:
   '200':
     description: 'Update contact by id'
