--- a/swagger/paths/contacts/post.yaml
+++ b/swagger/paths/contacts/post.yaml
@@ -41,7 +41,7 @@ requestBody:
               - personal
             example: personal
           photo:
-            description: "Link to contact's photo"
+            description: "Contact's photo"
             type: string
             format: binary
 responses:
